Htm: Updated sections and footer etc

--- a/index.html
+++ b/index.html
@@ -94,5 +94,32 @@
         <h1>Heading inside here</h1>
     </header>
 
+    <hr>
+
+<h2>@Section</h2>
+<section>
+    <h3>@White Section</h3>
+    <p>This will have white background </p>
+
+</section>
+
+<section>
+    <h3>@Off White Section</h3>
+    <p>This will have Off white background </p>
+
+</section>
+
+<hr>
+
+<h2>@Footer</h2>
+<footer>
+    <div>Some Small heading inside Footer </div>
+    <ul>
+        <li>SocialOne</li>
+        <li>SocialTwo</li>
+        <li>SocialThree</li>
+    </ul>
+</footer>
+
 </body>
 </html>  
